@@ -15,3 +15,5 @@
 /*_mj.py
 /.idea/*
 build
+
+unignore
