@@ -41,6 +41,7 @@ from hahomematic.const import (
     TYPE_FLOAT,
     TYPE_INTEGER,
     TYPE_STRING,
+    UNIGNORE_AND_ALWAYS_SHOW_PARAMETERS,
     HmEntityType,
     HmEntityUsage,
     HmEventType,
@@ -644,6 +645,14 @@ class CustomEntity(BaseEntity, CallbackEntity):
             )
         )
 
+        # add custom ignore entities
+        self._mark_entity_by_custom_unignore_parameters(
+            unignore_list=self._central.custom_unignore_parameters
+        )
+        self._mark_entity_by_custom_unignore_parameters(
+            unignore_list=UNIGNORE_AND_ALWAYS_SHOW_PARAMETERS
+        )
+
     def _add_entities(self, field_dict_name: str, is_sensor: bool = False) -> None:
         """Add entities to custom entity."""
         fields = self._device_desc.get(field_dict_name, {})
@@ -669,6 +678,16 @@ class CustomEntity(BaseEntity, CallbackEntity):
                 )
                 if entity:
                     entity.usage = HmEntityUsage.ENTITY
+
+    def _mark_entity_by_custom_unignore_parameters(
+        self, unignore_list: list[str]
+    ) -> None:
+        """Mark entities to be created in HA."""
+        if not unignore_list:
+            return None
+        for entity in self._device.entities.values():
+            if entity.parameter in unignore_list:
+                entity.usage = HmEntityUsage.ENTITY
 
     def _add_entity(self, field_name: str, entity: GenericEntity | None) -> None:
         """Add entity to collection and register callback"""
