@@ -20,7 +20,7 @@ async def test_central(central, loop) -> None:
     assert central.get_client_by_interface_id("ccu-dev-hm").model == "PyDevCCU"
     assert central.get_client().model == "PyDevCCU"
     assert len(central.hm_devices) == 344
-    assert len(central.hm_entities) == 4240
+    assert len(central.hm_entities) == 4665
 
     data = {}
     for device in central.hm_devices.values():
